--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 *git*
     * sourced from http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk
     * use ActiveSupport::Inflector, as Inflector is deprecated in Rails 2.1.1
+    * updated sanitize_filename to allow filenames that include the pound sign (@)
 
 *svn*
     * allow for directories in file_column dirs as well
